# fastapi-framework

./: Dockerfile  README.md  backend_pre_start.py  bitbucket-pipelines.yml  docker-compose.yml  migration.py  prestart.sh  pyproject.toml  roles.yml  run.cmd  run.sh
alembic/: env.py
alembic/versions/: f23ba6ebba6f_init_database.py
app/: factory.py  main.py
app/adapter/: user_adapter.py
app/adapters/: azure_user.py
app/apdapter/: azure_user_apdapter.py  user_apdapter.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: deps.py  role.py  user.py
app/constants/: __init__.py  azure.py  error_message.py  header.py
app/core/: __init__.py  config.py  containers.py  http_client.py  logging.py
app/db/: database.py
app/models/: base_model.py  role.py
app/repositories/: azure_user.py  base.py  base_db.py  base_user.py  role.py
app/schemas/: azure.py  role.py  token_claims.py  user.py
app/services/: __init__.py  role.py  user.py
app/utils/: list_utils.py  string_utils.py  user.py  validators.py
